physics/out_real_earth_diameter_test_200E_500KS_arrayPath.txt
uandino_v02.cpp: In function 'void calculateProbabilities()':
uandino_v02.cpp:441:10: error: 'class Planet' has no member named 'initalizeCoords'
   earth->initalizeCoords(0);
          ^
/var/spool/torque/mom_priv/jobs/282906.clustermaster.uniandes.edu.co.SC: line 45: ./uandino_v02.o: No such file or directory

real	0m0.001s
user	0m0.000s
sys	0m0.000s
Traceback (most recent call last):
  File "plotTheThing.py", line 6, in <module>
    probData=np.loadtxt('raw_probs.csv', delimiter=',', dtype=float)
  File "/lustre/apps/anaconda/2/lib/python2.7/site-packages/numpy/lib/npyio.py", line 896, in loadtxt
    fh = iter(open(fname, 'U'))
IOError: [Errno 2] No such file or directory: 'raw_probs.csv'
cp: cannot stat `probsTest.csv': No such file or directory
cp: cannot stat `potentialTest.csv': No such file or directory


(hpcstats) Getting modules
